--- a/main.html
+++ b/main.html
@@ -10,6 +10,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>Why I want to become a developer?</h1>
+	<p>I have strong interest in that particular field and I enjoy to solve real life problems.</p>
 
 </body>
 
